apps/services/n8n/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-server
  labels:
    app: n8n-server
  annotations:
    link.argocd.argoproj.io/external-link: https://n8n.lab.apj.dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n-server
  template:
    metadata:
      labels:
        app: n8n-server
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:1.94.1
        ports:
        - name: web
          containerPort: 5678
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 60
        startupProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 120
        volumeMounts:
        - name: config-storage
          mountPath: /home/node/.n8n
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: n8n-storage
