apps/services/n8n/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app: n8n-server
spec:
  selector:
    app: n8n-server
  ports:
    - name: web
      port: 80
      targetPort: 5678
      protocol: TCP
  type: ClusterIP
